--- a/docs/component/ad.html
+++ b/docs/component/ad.html
@@ -82,7 +82,7 @@
             
             
               <ul class="current">
-<li class="toctree-l1"><a class="reference internal" href="../dev.html">小程序简介</a></li>
+<li class="toctree-l1"><a class="reference internal" href="../dev.html">简介</a></li>
 <li class="toctree-l1"><a class="reference internal" href="../basic/index.html">基础教程</a></li>
 <li class="toctree-l1"><a class="reference internal" href="../framework/index.html">框架开发指南</a></li>
 <li class="toctree-l1"><a class="reference internal" href="../guide/index.html">运行环境</a></li>
@@ -108,7 +108,6 @@
 </li>
 <li class="toctree-l1"><a class="reference internal" href="../devtools/index.html">开发工具</a></li>
 <li class="toctree-l1"><a class="reference internal" href="../reference/index.html">参考资料</a></li>
-<li class="toctree-l1"><a class="reference internal" href="../wxcloud/index.html">云开发</a></li>
 <li class="toctree-l1"><a class="reference internal" href="../api/index.html">API</a></li>
 <li class="toctree-l1"><a class="reference internal" href="../api-backend/index.html">服务端开放接口</a></li>
 </ul>
@@ -183,23 +182,117 @@
 <p><span class="versionmodified added">1.9.94 新版功能: </span>低版本需做兼容处理</p>
 </div>
 <p>广告。目前暂时以邀请制开放申请，请留意后续模板消息的通知</p>
-<p>属性      类型      默认值     必填      说明      最低版本
-unit-id string          是       广告单元id，可在小程序管理后台的流量主模块新建        1.9.94
-bindload        eventhandle             是       广告加载成功的回调       2.2.1
-binderror       eventhandle             是       广告发生错误的回调，event.detail = {errCode: 1002}        2.2.1
-错误码信息与解决方案表
-错误码是通过binderror回调获取到的错误信息。</p>
-<p>代码      异常情况    理由      解决方案
-1000    后端错误调用失败        该项错误不是开发者的异常情况  一般情况下忽略一段时间即可恢复。
-1001    参数错误    使用方法错误  可以前往developers.weixin.qq.com确认具体教程（小程序和小游戏分别有各自的教程，可以在顶部选项中，“设计”一栏的右侧进行切换。
-1002    广告单元无效  可能是拼写错误、或者误用了其他APP的广告ID 请重新前往mp.weixin.qq.com确认广告位ID。
-1003    内部错误    该项错误不是开发者的异常情况  一般情况下忽略一段时间即可恢复。
-1004    无适合的广告  广告不是每一次都会出现，这次没有出现可能是由于该用户不适合浏览广告       属于正常情况，且开发者需要针对这种情况做形态上的兼容。
-1005    广告组件审核中 你的广告正在被审核，无法展现广告        请前往mp.weixin.qq.com确认审核状态，且开发者需要针对这种情况做形态上的兼容。
-1006    广告组件被驳回 你的广告审核失败，无法展现广告 请前往mp.weixin.qq.com确认审核状态，且开发者需要针对这种情况做形态上的兼容。
-1007    广告组件被驳回 你的广告能力已经被封禁，封禁期间无法展现广告  请前往mp.weixin.qq.com确认小程序广告封禁状态。
-1008    广告单元已关闭 该广告位的广告能力已经被关闭  请前往mp.weixin.qq.com重新打开对应广告位的展现。</p>
-<p>Bug &amp; Tip</p>
+<table class="docutils align-center">
+<colgroup>
+<col style="width: 11%" />
+<col style="width: 13%" />
+<col style="width: 8%" />
+<col style="width: 6%" />
+<col style="width: 52%" />
+<col style="width: 10%" />
+</colgroup>
+<thead>
+<tr class="row-odd"><th class="head"><p>属性</p></th>
+<th class="head"><p>类型</p></th>
+<th class="head"><p>默认值</p></th>
+<th class="head"><p>必填</p></th>
+<th class="head"><p>说明</p></th>
+<th class="head"><p>最低版本</p></th>
+</tr>
+</thead>
+<tbody>
+<tr class="row-even"><td><p>unit-id</p></td>
+<td><p>string</p></td>
+<td></td>
+<td><p>是</p></td>
+<td><p>广告单元id，可在小程序管理后台的流量主模块新建</p></td>
+<td><p>1.9.94</p></td>
+</tr>
+<tr class="row-odd"><td><p>bindload</p></td>
+<td><p>eventhandle</p></td>
+<td></td>
+<td><p>是</p></td>
+<td><p>广告加载成功的回调</p></td>
+<td><p>2.2.1</p></td>
+</tr>
+<tr class="row-even"><td><p>binderror</p></td>
+<td><p>eventhandle</p></td>
+<td></td>
+<td><p>是</p></td>
+<td><p>广告发生错误的回调，event.detail = {errCode: 1002}</p></td>
+<td><p>2.2.1</p></td>
+</tr>
+</tbody>
+</table>
+<p>错误码信息与解决方案表</p>
+<p>错误码是通过binderror回调获取到的错误信息。</p>
+<table class="docutils align-center">
+<colgroup>
+<col style="width: 5%" />
+<col style="width: 14%" />
+<col style="width: 37%" />
+<col style="width: 44%" />
+</colgroup>
+<thead>
+<tr class="row-odd"><th class="head"><p>代码</p></th>
+<th class="head"><p>异常情况</p></th>
+<th class="head"><p>理由</p></th>
+<th class="head"><p>解决方案</p></th>
+</tr>
+</thead>
+<tbody>
+<tr class="row-even"><td><p>1000</p></td>
+<td><p>后端错误调用失败</p></td>
+<td><p>该项错误不是开发者的异常情况</p></td>
+<td><p>一般情况下忽略一段时间即可恢复。</p></td>
+</tr>
+<tr class="row-odd"><td><p>1001</p></td>
+<td><p>参数错误</p></td>
+<td><p>使用方法错误</p></td>
+<td><p>可以前往developers.weixin.qq.com确认具体教程
+（小程序和小游戏分别有各自的教程，
+可以在顶部选项中，“设计”一栏的右侧进行切换。</p></td>
+</tr>
+<tr class="row-even"><td><p>1002</p></td>
+<td><p>广告单元无效</p></td>
+<td><p>可能是拼写错误、或者误用了其他APP的广告ID</p></td>
+<td><p>请重新前往mp.weixin.qq.com确认广告位ID。</p></td>
+</tr>
+<tr class="row-odd"><td><p>1003</p></td>
+<td><p>内部错误</p></td>
+<td><p>该项错误不是开发者的异常情况</p></td>
+<td><p>一般情况下忽略一段时间即可恢复。</p></td>
+</tr>
+<tr class="row-even"><td><p>1004</p></td>
+<td><p>无适合的广告</p></td>
+<td><p>广告不是每一次都会出现，
+这次没有出现可能是由于该用户不适合浏览广告</p></td>
+<td><p>属于正常情况，且开发者需要针对这种情况做形态上的兼容。</p></td>
+</tr>
+<tr class="row-odd"><td><p>1005</p></td>
+<td><p>广告组件审核中</p></td>
+<td><p>你的广告正在被审核，无法展现广告</p></td>
+<td><p>请前往mp.weixin.qq.com确认审核状态，
+且开发者需要针对这种情况做形态上的兼容。</p></td>
+</tr>
+<tr class="row-even"><td><p>1006</p></td>
+<td><p>广告组件被驳回</p></td>
+<td><p>你的广告审核失败，无法展现广告</p></td>
+<td><p>请前往mp.weixin.qq.com确认审核状态，
+且开发者需要针对这种情况做形态上的兼容。</p></td>
+</tr>
+<tr class="row-odd"><td><p>1007</p></td>
+<td><p>广告组件被驳回</p></td>
+<td><p>你的广告能力已经被封禁，封禁期间无法展现广告</p></td>
+<td><p>请前往mp.weixin.qq.com确认小程序广告封禁状态。</p></td>
+</tr>
+<tr class="row-even"><td><p>1008</p></td>
+<td><p>广告单元已关闭</p></td>
+<td><p>该广告位的广告能力已经被关闭</p></td>
+<td><p>请前往mp.weixin.qq.com重新打开对应广告位的展现。</p></td>
+</tr>
+</tbody>
+</table>
 <div class="admonition tip">
 <p class="admonition-title">小技巧</p>
 <p>在无广告展示时，ad 标签不会占用高度</p>
