--- a/docs/framework/view/animation.html
+++ b/docs/framework/view/animation.html
@@ -82,7 +82,7 @@
             
             
               <ul class="current">
-<li class="toctree-l1"><a class="reference internal" href="../../dev.html">小程序简介</a></li>
+<li class="toctree-l1"><a class="reference internal" href="../../dev.html">简介</a></li>
 <li class="toctree-l1"><a class="reference internal" href="../../basic/index.html">基础教程</a></li>
 <li class="toctree-l1 current"><a class="reference internal" href="../index.html">框架开发指南</a><ul class="current">
 <li class="toctree-l2"><a class="reference internal" href="../structure.html">目录结构</a></li>
@@ -110,7 +110,6 @@
 <li class="toctree-l1"><a class="reference internal" href="../../component/index.html">组件</a></li>
 <li class="toctree-l1"><a class="reference internal" href="../../devtools/index.html">开发工具</a></li>
 <li class="toctree-l1"><a class="reference internal" href="../../reference/index.html">参考资料</a></li>
-<li class="toctree-l1"><a class="reference internal" href="../../wxcloud/index.html">云开发</a></li>
 <li class="toctree-l1"><a class="reference internal" href="../../api/index.html">API</a></li>
 <li class="toctree-l1"><a class="reference internal" href="../../api-backend/index.html">服务端开放接口</a></li>
 </ul>
@@ -183,21 +182,43 @@
             
   <div class="section" id="id1">
 <h1>动画<a class="headerlink" href="#id1" title="永久链接至标题">¶</a></h1>
-<p>界面动画的常见方式
-在小程序中，通常可以使用 CSS 渐变 和 CSS 动画 来创建简易的界面动画。</p>
+<p>界面动画的常见方式</p>
+<p>在小程序中，通常可以使用 CSS 渐变 和 CSS 动画 来创建简易的界面动画。</p>
 <p>在开发者工具中预览效果</p>
 <p>同时，还可以使用 wx.createAnimation 接口来动态创建简易的动画效果。</p>
 <p>动画过程中，可以使用 bindtransitionend bindanimationstart bindanimationiteration bindanimationend 来监听动画事件。</p>
-<p>事件名 含义
-transitionend CSS 渐变结束或 wx.createAnimation 结束一个阶段
-animationstart CSS 动画开始
-animationiteration CSS 动画结束一个阶段
-animationend CSS 动画结束
-注意：这几个事件都不是冒泡事件，需要绑定在真正发生了动画的节点上才会生效。</p>
-<p>高级的动画方式
-在一些复杂场景下，上述的动画方法可能并不适用。</p>
-<p>WXS 响应事件 的方式可以通过使用 WXS 来响应事件的方法来动态调整节点的 style 属性。通过不断改变 style 属性的值可以做到动画效果。同时，这种方式也可以根据用户的触摸事件来动态地生成动画。</p>
-<p>使用连续使用 setData 来改变界面的方法也可以达到动画的效果。这样可以任意地改变界面，但通常会产生较大的延迟或卡顿，甚至导致小程序僵死。此时可以通过将页面的 setData 改为 自定义组件 中的 setData 来提升性能。下面的例子是使用 setData 来实现秒表动画的示例。</p>
+<table class="docutils align-center">
+<colgroup>
+<col style="width: 29%" />
+<col style="width: 71%" />
+</colgroup>
+<thead>
+<tr class="row-odd"><th class="head"><p>事件名</p></th>
+<th class="head"><p>含义</p></th>
+</tr>
+</thead>
+<tbody>
+<tr class="row-even"><td><p>transitionend</p></td>
+<td><p>CSS 渐变结束或 wx.createAnimation 结束一个阶段</p></td>
+</tr>
+<tr class="row-odd"><td><p>animationstart</p></td>
+<td><p>CSS 动画开始</p></td>
+</tr>
+<tr class="row-even"><td><p>animationiteration</p></td>
+<td><p>CSS 动画结束一个阶段</p></td>
+</tr>
+<tr class="row-odd"><td><p>animationend</p></td>
+<td><p>CSS 动画结束</p></td>
+</tr>
+</tbody>
+</table>
+<p>高级的动画方式</p>
+<p>在一些复杂场景下，上述的动画方法可能并不适用。</p>
+<p>WXS 响应事件 的方式可以通过使用 WXS 来响应事件的方法来动态调整节点的 style 属性。
+通过不断改变 style 属性的值可以做到动画效果。同时，这种方式也可以根据用户的触摸事件来动态地生成动画。</p>
+<p>使用连续使用 setData 来改变界面的方法也可以达到动画的效果。这样可以任意地改变界面，
+但通常会产生较大的延迟或卡顿，甚至导致小程序僵死。此时可以通过将页面的 setData 改为 自定义组件 中的 setData 来提升性能。
+下面的例子是使用 setData 来实现秒表动画的示例。</p>
 <p>在开发者工具中预览效果</p>
 </div>
 
