--- a/docs/framework/view/component.html
+++ b/docs/framework/view/component.html
@@ -82,7 +82,7 @@
             
             
               <ul class="current">
-<li class="toctree-l1"><a class="reference internal" href="../../dev.html">小程序简介</a></li>
+<li class="toctree-l1"><a class="reference internal" href="../../dev.html">简介</a></li>
 <li class="toctree-l1"><a class="reference internal" href="../../basic/index.html">基础教程</a></li>
 <li class="toctree-l1 current"><a class="reference internal" href="../index.html">框架开发指南</a><ul class="current">
 <li class="toctree-l2"><a class="reference internal" href="../structure.html">目录结构</a></li>
@@ -110,7 +110,6 @@
 <li class="toctree-l1"><a class="reference internal" href="../../component/index.html">组件</a></li>
 <li class="toctree-l1"><a class="reference internal" href="../../devtools/index.html">开发工具</a></li>
 <li class="toctree-l1"><a class="reference internal" href="../../reference/index.html">参考资料</a></li>
-<li class="toctree-l1"><a class="reference internal" href="../../wxcloud/index.html">云开发</a></li>
 <li class="toctree-l1"><a class="reference internal" href="../../api/index.html">API</a></li>
 <li class="toctree-l1"><a class="reference internal" href="../../api-backend/index.html">服务端开放接口</a></li>
 </ul>
@@ -187,34 +186,27 @@
 <p>什么是组件：</p>
 <p>组件是视图层的基本组成单元。
 组件自带一些功能与微信风格一致的样式。
-一个组件通常包括 开始标签 和 结束标签，属性 用来修饰这个组件，内容 在两个标签之内。
-&lt;tagname property=”value”&gt;</p>
-<blockquote>
-<div><p>Content goes here …</p>
-</div></blockquote>
-<p>&lt;/tagname&gt;
-注意：所有组件与属性都是小写，以连字符-连接</p>
-<p>属性类型
-类型      描述      注解
-Boolean 布尔值     组件写上该属性，不管是什么值都被当作 true；只有组件上没有该属性时，属性值才为false。
-如果属性值为变量，变量的值会被转换为Boolean类型
+一个组件通常包括 开始标签 和 结束标签，属性 用来修饰这个组件，内容 在两个标签之内。</p>
+<p>属性类型</p>
+<p>类型      描述      注解
+Boolean 布尔值     组件写上该属性，不管是什么值都被当作 true；只有组件上没有该属性时，属性值才为false。如果属性值为变量，变量的值会被转换为Boolean类型
 Number  数字      1, 2.5
 String  字符串     “string”
 Array   数组      [ 1, “string” ]
 Object  对象      { key: value }
 EventHandler    事件处理函数名 “handlerName” 是 Page 中定义的事件处理函数名
-Any     任意属性
-公共属性
-所有组件都有以下属性：</p>
+Any     任意属性</p>
+<p>公共属性</p>
+<p>所有组件都有以下属性：</p>
 <p>属性名     类型      描述      注解
 id      String  组件的唯一标示 保持整个页面唯一
 class   String  组件的样式类  在对应的 WXSS 中定义的样式类
 style   String  组件的内联样式 可以动态设置的内联样式
 hidden  Boolean 组件是否显示  所有组件默认显示
 data-*  Any     自定义属性   组件上触发的事件时，会发送给事件处理函数
-bind* / catch*  EventHandler    组件的事件   详见事件
-特殊属性
-几乎所有组件都有各自定义的属性，可以对该组件的功能或样式进行修饰，请参考各个组件的定义。</p>
+bind* / catch*  EventHandler    组件的事件   详见事件</p>
+<p>特殊属性</p>
+<p>几乎所有组件都有各自定义的属性，可以对该组件的功能或样式进行修饰，请参考各个组件的定义。</p>
 </div>
 
 
