--- a/docs/framework/view/interactive-animation.html
+++ b/docs/framework/view/interactive-animation.html
@@ -82,7 +82,7 @@
             
             
               <ul class="current">
-<li class="toctree-l1"><a class="reference internal" href="../../dev.html">小程序简介</a></li>
+<li class="toctree-l1"><a class="reference internal" href="../../dev.html">简介</a></li>
 <li class="toctree-l1"><a class="reference internal" href="../../basic/index.html">基础教程</a></li>
 <li class="toctree-l1 current"><a class="reference internal" href="../index.html">框架开发指南</a><ul class="current">
 <li class="toctree-l2"><a class="reference internal" href="../structure.html">目录结构</a></li>
@@ -110,7 +110,6 @@
 <li class="toctree-l1"><a class="reference internal" href="../../component/index.html">组件</a></li>
 <li class="toctree-l1"><a class="reference internal" href="../../devtools/index.html">开发工具</a></li>
 <li class="toctree-l1"><a class="reference internal" href="../../reference/index.html">参考资料</a></li>
-<li class="toctree-l1"><a class="reference internal" href="../../wxcloud/index.html">云开发</a></li>
 <li class="toctree-l1"><a class="reference internal" href="../../api/index.html">API</a></li>
 <li class="toctree-l1"><a class="reference internal" href="../../api-backend/index.html">服务端开放接口</a></li>
 </ul>
@@ -192,21 +191,19 @@
 <p>实现方案
 本方案基本的思路是减少通信的次数，让事件在视图层（Webview）响应。小程序的框架分为视图层（Webview）和逻辑层（App Service），这样分层的目的是管控，开发者的代码只能运行在逻辑层（App Service），而这个思路就必须要让开发者的代码运行在视图层（Webview），如下图所示的流程：</p>
 <p>使用 WXS 函数用来响应小程序事件，目前只能响应内置组件的事件，不支持自定义组件事件。WXS 函数的除了纯逻辑的运算，还可以通过封装好的ComponentDescriptor 实例来访问以及设置组件的 class 和样式，对于交互动画，设置 style 和 class 足够了。WXS 函数的例子如下：</p>
-<dl>
-<dt>const wxsFunction = function (event, ownerInstance) {</dt><dd><p>const instance = ownerInstance.selectComponent(‘.classSelector’) // 返回组件的实例
-instance.setStyle({</p>
-<blockquote>
-<div><p>‘font-size’: ‘14px’ // 支持rpx</p>
-</div></blockquote>
-<p>})
-instance.getDataset()
-instance.setClass(className)
-// …
-return false // 不往上冒泡，相当于调用了同时调用了stopPropagation和preventDefault</p>
-</dd>
-</dl>
-<p>}
-其中入参 event 是小程序事件对象基础上多了 event.instance 来表示触发事件的组件的 ComponentDescriptor 实例。ownerInstance 表示的是触发事件的组件所在的组件的 ComponentDescriptor 实例，如果触发事件的组件是在页面内的，ownerInstance 表示的是页面实例。</p>
+<div class="highlight-js notranslate"><div class="highlight"><pre><span></span><span class="kr">const</span> <span class="nx">wxsFunction</span> <span class="o">=</span> <span class="kd">function</span> <span class="p">(</span><span class="nx">event</span><span class="p">,</span> <span class="nx">ownerInstance</span><span class="p">)</span> <span class="p">{</span>
+  <span class="kr">const</span> <span class="nx">instance</span> <span class="o">=</span> <span class="nx">ownerInstance</span><span class="p">.</span><span class="nx">selectComponent</span><span class="p">(</span><span class="s1">&#39;.classSelector&#39;</span><span class="p">)</span> <span class="c1">// 返回组件的实例</span>
+  <span class="nx">instance</span><span class="p">.</span><span class="nx">setStyle</span><span class="p">({</span>
+    <span class="s1">&#39;font-size&#39;</span><span class="o">:</span> <span class="s1">&#39;14px&#39;</span> <span class="c1">// 支持rpx</span>
+  <span class="p">})</span>
+  <span class="nx">instance</span><span class="p">.</span><span class="nx">getDataset</span><span class="p">()</span>
+  <span class="nx">instance</span><span class="p">.</span><span class="nx">setClass</span><span class="p">(</span><span class="nx">className</span><span class="p">)</span>
+  <span class="c1">// ...</span>
+  <span class="k">return</span> <span class="kc">false</span> <span class="c1">// 不往上冒泡，相当于调用了同时调用了stopPropagation和preventDefault</span>
+<span class="p">}</span>
+</pre></div>
+</div>
+<p>其中入参 event 是小程序事件对象基础上多了 event.instance 来表示触发事件的组件的 ComponentDescriptor 实例。ownerInstance 表示的是触发事件的组件所在的组件的 ComponentDescriptor 实例，如果触发事件的组件是在页面内的，ownerInstance 表示的是页面实例。</p>
 <p>ComponentDescriptor的定义如下：</p>
 <p>方法      参数      描述
 selectComponent selector对象      返回组件的 ComponentDescriptor 实例。
@@ -220,38 +217,36 @@ getState        无       返回一个object对象，当有局部变量需要存
 triggerEvent    (eventName, detail)     和组件的triggerEvent一致。
 WXS 运行在视图层（Webview），里面的逻辑毕竟能做的事件比较少，需要有一个机制和逻辑层（App Service）开发者的代码通信，上面的 callMethod 是 WXS 里面调用逻辑层（App Service）开发者的代码的方法，而 WxsPropObserver 是逻辑层（App Service）开发者的代码调用 WXS 逻辑的机制。</p>
 <p>使用方法
-WXML定义事件：
-&lt;wxs module=”test” src=”./test.wxs”&gt;&lt;/wxs&gt;
-&lt;view</p>
-<blockquote>
-<div><p>change:prop=”{{test.propObserver}}”
-prop=”{{propValue}}”
-bindtouchmove=”{{test.touchmove}}”
-class=”movable”</p>
-</div></blockquote>
-<p>&gt;&lt;/view&gt;
-上面的change:prop（属性前面带change:前缀）是在 prop 属性被设置的时候触发 WXS 函数，值必须用{{}}括起来。类似 Component 定义的 properties 里面的 observer 属性，在setData({propValue: newValue})调用之后会触发。</p>
+WXML定义事件：</p>
+<div class="highlight-html notranslate"><div class="highlight"><pre><span></span><span class="p">&lt;</span><span class="nt">wxs</span> <span class="na">module</span><span class="o">=</span><span class="s">&quot;test&quot;</span> <span class="na">src</span><span class="o">=</span><span class="s">&quot;./test.wxs&quot;</span><span class="p">&gt;&lt;/</span><span class="nt">wxs</span><span class="p">&gt;</span>
+<span class="p">&lt;</span><span class="nt">view</span>
+  <span class="na">change:prop</span><span class="o">=</span><span class="s">&quot;{{test.propObserver}}&quot;</span>
+  <span class="na">prop</span><span class="o">=</span><span class="s">&quot;{{propValue}}&quot;</span>
+  <span class="na">bindtouchmove</span><span class="o">=</span><span class="s">&quot;{{test.touchmove}}&quot;</span>
+  <span class="na">class</span><span class="o">=</span><span class="s">&quot;movable&quot;</span>
+<span class="p">&gt;&lt;/</span><span class="nt">view</span><span class="p">&gt;</span>
+</pre></div>
+</div>
+<p>上面的change:prop（属性前面带change:前缀）是在 prop 属性被设置的时候触发 WXS 函数，值必须用{{}}括起来。类似 Component 定义的 properties 里面的 observer 属性，在setData({propValue: newValue})调用之后会触发。</p>
 <p>注意：WXS函数必须用{{}}括起来。当 prop 的值被设置 WXS 函数就会触发，而不只是值发生改变，所以在页面初始化的时候会调用一次WxsPropObserver的函数。</p>
-<p>WXS文件test.wxs里面定义并导出事件处理函数和属性改变触发的函数：
-module.exports = {</p>
-<blockquote>
-<div><dl class="simple">
-<dt>touchmove(event, instance) {</dt><dd><p>console.log(‘log event’, JSON.stringify(event))</p>
-</dd>
-</dl>
-<p>},
-propObserver(newValue, oldValue, ownerInstance, instance) {</p>
-<blockquote>
-<div><p>console.log(‘prop observer’, newValue, oldValue)</p>
-</div></blockquote>
-<p>}</p>
-</div></blockquote>
-<p>}
-更多示例请查看在开发者工具中预览效果</p>
-<p>Tips
-目前还不支持原生组件的事件、&lt;input&gt;和&lt;textarea&gt;组件的 bindinput 事件
+<p>WXS文件test.wxs里面定义并导出事件处理函数和属性改变触发的函数：</p>
+<div class="highlight-js notranslate"><div class="highlight"><pre><span></span><span class="nx">module</span><span class="p">.</span><span class="nx">exports</span> <span class="o">=</span> <span class="p">{</span>
+  <span class="nx">touchmove</span><span class="p">(</span><span class="nx">event</span><span class="p">,</span> <span class="nx">instance</span><span class="p">)</span> <span class="p">{</span>
+    <span class="nx">console</span><span class="p">.</span><span class="nx">log</span><span class="p">(</span><span class="s1">&#39;log event&#39;</span><span class="p">,</span> <span class="nx">JSON</span><span class="p">.</span><span class="nx">stringify</span><span class="p">(</span><span class="nx">event</span><span class="p">))</span>
+  <span class="p">},</span>
+  <span class="nx">propObserver</span><span class="p">(</span><span class="nx">newValue</span><span class="p">,</span> <span class="nx">oldValue</span><span class="p">,</span> <span class="nx">ownerInstance</span><span class="p">,</span> <span class="nx">instance</span><span class="p">)</span> <span class="p">{</span>
+    <span class="nx">console</span><span class="p">.</span><span class="nx">log</span><span class="p">(</span><span class="s1">&#39;prop observer&#39;</span><span class="p">,</span> <span class="nx">newValue</span><span class="p">,</span> <span class="nx">oldValue</span><span class="p">)</span>
+  <span class="p">}</span>
+<span class="p">}</span>
+</pre></div>
+</div>
+<p>更多示例请查看在开发者工具中预览效果</p>
+<div class="admonition tip">
+<p class="admonition-title">小技巧</p>
+<p>目前还不支持原生组件的事件、&lt;input&gt;和&lt;textarea&gt;组件的 bindinput 事件
 1.02.1901170及以后版本的开发者工具上支持交互动画，最低版本基础库是2.4.4
 目前在WXS函数里面仅支持console.log方式打日志定位问题，注意连续的重复日志会被过滤掉。</p>
+</div>
 </div>
 
 
