--- a/docs/framework/view/selector.html
+++ b/docs/framework/view/selector.html
@@ -82,7 +82,7 @@
             
             
               <ul class="current">
-<li class="toctree-l1"><a class="reference internal" href="../../dev.html">小程序简介</a></li>
+<li class="toctree-l1"><a class="reference internal" href="../../dev.html">简介</a></li>
 <li class="toctree-l1"><a class="reference internal" href="../../basic/index.html">基础教程</a></li>
 <li class="toctree-l1 current"><a class="reference internal" href="../index.html">框架开发指南</a><ul class="current">
 <li class="toctree-l2"><a class="reference internal" href="../structure.html">目录结构</a></li>
@@ -110,7 +110,6 @@
 <li class="toctree-l1"><a class="reference internal" href="../../component/index.html">组件</a></li>
 <li class="toctree-l1"><a class="reference internal" href="../../devtools/index.html">开发工具</a></li>
 <li class="toctree-l1"><a class="reference internal" href="../../reference/index.html">参考资料</a></li>
-<li class="toctree-l1"><a class="reference internal" href="../../wxcloud/index.html">云开发</a></li>
 <li class="toctree-l1"><a class="reference internal" href="../../api/index.html">API</a></li>
 <li class="toctree-l1"><a class="reference internal" href="../../api-backend/index.html">服务端开放接口</a></li>
 </ul>
@@ -187,22 +186,20 @@
 节点信息查询 API 可以用于获取节点属性、样式、在界面上的位置等信息。</p>
 <p>最常见的用法是使用这个接口来查询某个节点的当前位置，以及界面的滚动位置。</p>
 <p>示例代码：</p>
-<p>const query = wx.createSelectorQuery()
-query.select(‘#the-id’).boundingClientRect(function (res) {</p>
-<blockquote>
-<div><p>res.top // #the-id 节点的上边界坐标（相对于显示区域）</p>
-</div></blockquote>
-<p>})
-query.selectViewport().scrollOffset(function (res) {</p>
-<blockquote>
-<div><p>res.scrollTop // 显示区域的竖直滚动位置</p>
-</div></blockquote>
-<p>})
-query.exec()
-上述示例中， #the-id 是一个节点选择器，与 CSS 的选择器相近但略有区别，请参见 SelectorQuery.select 的相关说明。</p>
+<div class="highlight-js notranslate"><div class="highlight"><pre><span></span><span class="kr">const</span> <span class="nx">query</span> <span class="o">=</span> <span class="nx">wx</span><span class="p">.</span><span class="nx">createSelectorQuery</span><span class="p">()</span>
+<span class="nx">query</span><span class="p">.</span><span class="nx">select</span><span class="p">(</span><span class="s1">&#39;#the-id&#39;</span><span class="p">).</span><span class="nx">boundingClientRect</span><span class="p">(</span><span class="kd">function</span> <span class="p">(</span><span class="nx">res</span><span class="p">)</span> <span class="p">{</span>
+  <span class="nx">res</span><span class="p">.</span><span class="nx">top</span> <span class="c1">// #the-id 节点的上边界坐标（相对于显示区域）</span>
+<span class="p">})</span>
+<span class="nx">query</span><span class="p">.</span><span class="nx">selectViewport</span><span class="p">().</span><span class="nx">scrollOffset</span><span class="p">(</span><span class="kd">function</span> <span class="p">(</span><span class="nx">res</span><span class="p">)</span> <span class="p">{</span>
+  <span class="nx">res</span><span class="p">.</span><span class="nx">scrollTop</span> <span class="c1">// 显示区域的竖直滚动位置</span>
+<span class="p">})</span>
+<span class="nx">query</span><span class="p">.</span><span class="nx">exec</span><span class="p">()</span>
+</pre></div>
+</div>
+<p>上述示例中， #the-id 是一个节点选择器，与 CSS 的选择器相近但略有区别，请参见 SelectorQuery.select 的相关说明。</p>
 <p>在自定义组件或包含自定义组件的页面中，推荐使用 this.createSelectorQuery 来代替 wx.createSelectorQuery ，这样可以确保在正确的范围内选择节点。</p>
-<p>WXML节点布局相交状态
-节点布局相交状态 API 可用于监听两个或多个组件节点在布局位置上的相交状态。这一组API常常可以用于推断某些节点是否可以被用户看见、有多大比例可以被用户看见。</p>
+<p>WXML节点布局相交状态</p>
+<p>节点布局相交状态 API 可用于监听两个或多个组件节点在布局位置上的相交状态。这一组API常常可以用于推断某些节点是否可以被用户看见、有多大比例可以被用户看见。</p>
 <p>这一组API涉及的主要概念如下。</p>
 <p>参照节点：监听的参照节点，取它的布局区域作为参照区域。如果有多个参照节点，则会取它们布局区域的 交集 作为参照区域。页面显示区域也可作为参照区域之一。
 目标节点：监听的目标，默认只能是一个节点（使用 selectAll 选项时，可以同时监听多个节点）。
@@ -211,49 +208,44 @@ query.exec()
 阈值：相交比例如果达到阈值，则会触发监听器的回调函数。阈值可以有多个。
 以下示例代码可以在目标节点（用选择器 .target-class 指定）每次进入或离开页面显示区域时，触发回调函数。</p>
 <p>示例代码：</p>
-<dl>
-<dt>Page({</dt><dd><dl>
-<dt>onLoad() {</dt><dd><dl class="simple">
-<dt>wx.createIntersectionObserver().relativeToViewport().observe(‘.target-class’, (res) =&gt; {</dt><dd><p>res.id // 目标节点 id
-res.dataset // 目标节点 dataset
-res.intersectionRatio // 相交区域占目标节点的布局区域的比例
-res.intersectionRect // 相交区域
-res.intersectionRect.left // 相交区域的左边界坐标
-res.intersectionRect.top // 相交区域的上边界坐标
-res.intersectionRect.width // 相交区域的宽度
-res.intersectionRect.height // 相交区域的高度</p>
-</dd>
-</dl>
-<p>})</p>
-</dd>
-</dl>
-<p>}</p>
-</dd>
-</dl>
-<p>})
-以下示例代码可以在目标节点（用选择器 .target-class 指定）与参照节点（用选择器 .relative-class 指定）在页面显示区域内相交或相离，且相交或相离程度达到目标节点布局区域的20%和50%时，触发回调函数。</p>
+<div class="highlight-js notranslate"><div class="highlight"><pre><span></span><span class="nx">Page</span><span class="p">({</span>
+  <span class="nx">onLoad</span><span class="p">()</span> <span class="p">{</span>
+    <span class="nx">wx</span><span class="p">.</span><span class="nx">createIntersectionObserver</span><span class="p">().</span><span class="nx">relativeToViewport</span><span class="p">().</span><span class="nx">observe</span><span class="p">(</span><span class="s1">&#39;.target-class&#39;</span><span class="p">,</span> <span class="p">(</span><span class="nx">res</span><span class="p">)</span> <span class="p">=&gt;</span> <span class="p">{</span>
+      <span class="nx">res</span><span class="p">.</span><span class="nx">id</span> <span class="c1">// 目标节点 id</span>
+      <span class="nx">res</span><span class="p">.</span><span class="nx">dataset</span> <span class="c1">// 目标节点 dataset</span>
+      <span class="nx">res</span><span class="p">.</span><span class="nx">intersectionRatio</span> <span class="c1">// 相交区域占目标节点的布局区域的比例</span>
+      <span class="nx">res</span><span class="p">.</span><span class="nx">intersectionRect</span> <span class="c1">// 相交区域</span>
+      <span class="nx">res</span><span class="p">.</span><span class="nx">intersectionRect</span><span class="p">.</span><span class="nx">left</span> <span class="c1">// 相交区域的左边界坐标</span>
+      <span class="nx">res</span><span class="p">.</span><span class="nx">intersectionRect</span><span class="p">.</span><span class="nx">top</span> <span class="c1">// 相交区域的上边界坐标</span>
+      <span class="nx">res</span><span class="p">.</span><span class="nx">intersectionRect</span><span class="p">.</span><span class="nx">width</span> <span class="c1">// 相交区域的宽度</span>
+      <span class="nx">res</span><span class="p">.</span><span class="nx">intersectionRect</span><span class="p">.</span><span class="nx">height</span> <span class="c1">// 相交区域的高度</span>
+    <span class="p">})</span>
+  <span class="p">}</span>
+<span class="p">})</span>
+</pre></div>
+</div>
+<p>以下示例代码可以在目标节点（用选择器 .target-class 指定）与参照节点（用选择器 .relative-class 指定）在页面显示区域内相交或相离，且相交或相离程度达到目标节点布局区域的20%和50%时，触发回调函数。</p>
 <p>示例代码：</p>
-<dl>
-<dt>Page({</dt><dd><dl>
-<dt>onLoad() {</dt><dd><dl class="simple">
-<dt>wx.createIntersectionObserver(this, {</dt><dd><p>thresholds: [0.2, 0.5]</p>
-</dd>
-<dt>}).relativeTo(‘.relative-class’).relativeToViewport().observe(‘.target-class’, (res) =&gt; {</dt><dd><p>res.intersectionRatio // 相交区域占目标节点的布局区域的比例
-res.intersectionRect // 相交区域
-res.intersectionRect.left // 相交区域的左边界坐标
-res.intersectionRect.top // 相交区域的上边界坐标
-res.intersectionRect.width // 相交区域的宽度
-res.intersectionRect.height // 相交区域的高度</p>
-</dd>
-</dl>
-<p>})</p>
-</dd>
-</dl>
-<p>}</p>
-</dd>
-</dl>
-<p>})
-注意：与页面显示区域的相交区域并不准确代表用户可见的区域，因为参与计算的区域是“布局区域”，布局区域可能会在绘制时被其他节点裁剪隐藏（如遇祖先节点中 overflow 样式为 hidden 的节点）或遮盖（如遇 fixed 定位的节点）。</p>
+<div class="highlight-js notranslate"><div class="highlight"><pre><span></span><span class="nx">Page</span><span class="p">({</span>
+  <span class="nx">onLoad</span><span class="p">()</span> <span class="p">{</span>
+    <span class="nx">wx</span><span class="p">.</span><span class="nx">createIntersectionObserver</span><span class="p">(</span><span class="k">this</span><span class="p">,</span> <span class="p">{</span>
+      <span class="nx">thresholds</span><span class="o">:</span> <span class="p">[</span><span class="mf">0.2</span><span class="p">,</span> <span class="mf">0.5</span><span class="p">]</span>
+    <span class="p">}).</span><span class="nx">relativeTo</span><span class="p">(</span><span class="s1">&#39;.relative-class&#39;</span><span class="p">).</span><span class="nx">relativeToViewport</span><span class="p">().</span><span class="nx">observe</span><span class="p">(</span><span class="s1">&#39;.target-class&#39;</span><span class="p">,</span> <span class="p">(</span><span class="nx">res</span><span class="p">)</span> <span class="p">=&gt;</span> <span class="p">{</span>
+      <span class="nx">res</span><span class="p">.</span><span class="nx">intersectionRatio</span> <span class="c1">// 相交区域占目标节点的布局区域的比例</span>
+      <span class="nx">res</span><span class="p">.</span><span class="nx">intersectionRect</span> <span class="c1">// 相交区域</span>
+      <span class="nx">res</span><span class="p">.</span><span class="nx">intersectionRect</span><span class="p">.</span><span class="nx">left</span> <span class="c1">// 相交区域的左边界坐标</span>
+      <span class="nx">res</span><span class="p">.</span><span class="nx">intersectionRect</span><span class="p">.</span><span class="nx">top</span> <span class="c1">// 相交区域的上边界坐标</span>
+      <span class="nx">res</span><span class="p">.</span><span class="nx">intersectionRect</span><span class="p">.</span><span class="nx">width</span> <span class="c1">// 相交区域的宽度</span>
+      <span class="nx">res</span><span class="p">.</span><span class="nx">intersectionRect</span><span class="p">.</span><span class="nx">height</span> <span class="c1">// 相交区域的高度</span>
+    <span class="p">})</span>
+  <span class="p">}</span>
+<span class="p">})</span>
+</pre></div>
+</div>
+<div class="admonition tip">
+<p class="admonition-title">小技巧</p>
+<p>与页面显示区域的相交区域并不准确代表用户可见的区域，因为参与计算的区域是“布局区域”，布局区域可能会在绘制时被其他节点裁剪隐藏（如遇祖先节点中 overflow 样式为 hidden 的节点）或遮盖（如遇 fixed 定位的节点）。</p>
+</div>
 <p>在自定义组件或包含自定义组件的页面中，推荐使用 this.createIntersectionObserver 来代替 wx.createIntersectionObserver ，这样可以确保在正确的范围内选择节点。</p>
 </div>
 
