--- a/docs/framework/view/wxss.html
+++ b/docs/framework/view/wxss.html
@@ -82,7 +82,7 @@
             
             
               <ul class="current">
-<li class="toctree-l1"><a class="reference internal" href="../../dev.html">小程序简介</a></li>
+<li class="toctree-l1"><a class="reference internal" href="../../dev.html">简介</a></li>
 <li class="toctree-l1"><a class="reference internal" href="../../basic/index.html">基础教程</a></li>
 <li class="toctree-l1 current"><a class="reference internal" href="../index.html">框架开发指南</a><ul class="current">
 <li class="toctree-l2"><a class="reference internal" href="../structure.html">目录结构</a></li>
@@ -110,7 +110,6 @@
 <li class="toctree-l1"><a class="reference internal" href="../../component/index.html">组件</a></li>
 <li class="toctree-l1"><a class="reference internal" href="../../devtools/index.html">开发工具</a></li>
 <li class="toctree-l1"><a class="reference internal" href="../../reference/index.html">参考资料</a></li>
-<li class="toctree-l1"><a class="reference internal" href="../../wxcloud/index.html">云开发</a></li>
 <li class="toctree-l1"><a class="reference internal" href="../../api/index.html">API</a></li>
 <li class="toctree-l1"><a class="reference internal" href="../../api-backend/index.html">服务端开放接口</a></li>
 </ul>
@@ -187,49 +186,53 @@
 <p>WXSS 用来决定 WXML 的组件应该怎么显示。</p>
 <p>为了适应广大的前端开发者，WXSS 具有 CSS 大部分特性。同时为了更适合开发微信小程序，WXSS 对 CSS 进行了扩充以及修改。</p>
 <p>与 CSS 相比，WXSS 扩展的特性有：</p>
-<p>尺寸单位
-样式导入
-尺寸单位
-rpx（responsive pixel）: 可以根据屏幕宽度进行自适应。规定屏幕宽为750rpx。如在 iPhone6 上，屏幕宽度为375px，共有750个物理像素，则750rpx = 375px = 750物理像素，1rpx = 0.5px = 1物理像素。
+<p>尺寸单位</p>
+<p>样式导入</p>
+<p>尺寸单位</p>
+<p>rpx（responsive pixel）: 可以根据屏幕宽度进行自适应。规定屏幕宽为750rpx。如在 iPhone6 上，屏幕宽度为375px，共有750个物理像素，则750rpx = 375px = 750物理像素，1rpx = 0.5px = 1物理像素。
 设备      rpx换算px (屏幕宽度/750)      px换算rpx (750/屏幕宽度)
 iPhone5 1rpx = 0.42px   1px = 2.34rpx
 iPhone6 1rpx = 0.5px    1px = 2rpx
-iPhone6 Plus    1rpx = 0.552px  1px = 1.81rpx
-建议： 开发微信小程序时设计师可以用 iPhone6 作为视觉稿的标准。</p>
-<p>注意： 在较小的屏幕上不可避免的会有一些毛刺，请在开发时尽量避免这种情况。</p>
-<p>样式导入
-使用&#64;import语句可以导入外联样式表，&#64;import后跟需要导入的外联样式表的相对路径，用;表示语句结束。</p>
+iPhone6 Plus    1rpx = 0.552px  1px = 1.81rpx</p>
+<p>建议： 开发微信小程序时设计师可以用 iPhone6 作为视觉稿的标准。</p>
+<div class="admonition tip">
+<p class="admonition-title">小技巧</p>
+<p>在较小的屏幕上不可避免的会有一些毛刺，请在开发时尽量避免这种情况。</p>
+</div>
+<p>样式导入 使用&#64;import语句可以导入外联样式表，&#64;import后跟需要导入的外联样式表的相对路径，用;表示语句结束。</p>
 <p>示例代码：</p>
-<p>/** common.wxss <a href="#id1"><span class="problematic" id="id2">**</span></a>/
-.small-p {</p>
-<blockquote>
-<div><p>padding:5px;</p>
-</div></blockquote>
-<p>}
-/** app.wxss <a href="#id3"><span class="problematic" id="id4">**</span></a>/
-&#64;import “common.wxss”;
-.middle-p {</p>
-<blockquote>
-<div><p>padding:15px;</p>
-</div></blockquote>
-<p>}
-内联样式
-框架组件上支持使用 style、class 属性来控制组件的样式。</p>
-<p>style：静态的样式统一写到 class 中。style 接收动态的样式，在运行时会进行解析，请尽量避免将静态的样式写进 style 中，以免影响渲染速度。
-&lt;view style=”color:{{color}};” /&gt;
-class：用于指定样式规则，其属性值是样式规则中类选择器名(样式类名)的集合，样式类名不需要带上.，样式类名之间用空格分隔。
-&lt;view class=”normal_view” /&gt;
-选择器
-目前支持的选择器有：</p>
+<div class="highlight-css notranslate"><div class="highlight"><pre><span></span><span class="c">/** common.wxss **/</span>
+<span class="p">.</span><span class="nc">small-p</span> <span class="p">{</span>
+  <span class="k">padding</span><span class="p">:</span><span class="mi">5</span><span class="kt">px</span><span class="p">;</span>
+<span class="p">}</span>
+<span class="c">/** app.wxss **/</span>
+<span class="p">@</span><span class="k">import</span> <span class="s2">&quot;common.wxss&quot;</span><span class="p">;</span>
+<span class="p">.</span><span class="nc">middle-p</span> <span class="p">{</span>
+  <span class="k">padding</span><span class="p">:</span><span class="mi">15</span><span class="kt">px</span><span class="p">;</span>
+<span class="p">}</span>
+</pre></div>
+</div>
+<p>内联样式</p>
+<p>框架组件上支持使用 style、class 属性来控制组件的样式。</p>
+<p>style：静态的样式统一写到 class 中。style 接收动态的样式，在运行时会进行解析，请尽量避免将静态的样式写进 style 中，以免影响渲染速度。</p>
+<div class="highlight-html notranslate"><div class="highlight"><pre><span></span><span class="p">&lt;</span><span class="nt">view</span> <span class="na">style</span><span class="o">=</span><span class="s">&quot;color:{{color}};&quot;</span> <span class="p">/&gt;</span>
+</pre></div>
+</div>
+<p>class：用于指定样式规则，其属性值是样式规则中类选择器名(样式类名)的集合，样式类名不需要带上.，样式类名之间用空格分隔。</p>
+<div class="highlight-html notranslate"><div class="highlight"><pre><span></span><span class="p">&lt;</span><span class="nt">view</span> <span class="na">class</span><span class="o">=</span><span class="s">&quot;normal_view&quot;</span> <span class="p">/&gt;</span>
+</pre></div>
+</div>
+<p>选择器</p>
+<p>目前支持的选择器有：</p>
 <p>选择器     样例      样例描述
 .class  .intro  选择所有拥有 class=”intro” 的组件
 #id     #firstname      选择拥有 id=”firstname” 的组件
 element view    选择所有 view 组件
 element, element        view, checkbox  选择所有文档的 view 组件和所有的 checkbox 组件
 ::after view::after     在 view 组件后边插入内容
-::before        view::before    在 view 组件前边插入内容
-全局样式与局部样式
-定义在 app.wxss 中的样式为全局样式，作用于每一个页面。在 page 的 wxss 文件中定义的样式为局部样式，只作用在对应的页面，并会覆盖 app.wxss 中相同的选择器。</p>
+::before        view::before    在 view 组件前边插入内容</p>
+<p>全局样式与局部样式</p>
+<p>定义在 app.wxss 中的样式为全局样式，作用于每一个页面。在 page 的 wxss 文件中定义的样式为局部样式，只作用在对应的页面，并会覆盖 app.wxss 中相同的选择器。</p>
 </div>
 
 
